<resources>
    <string name="app_name">Traveloid</string>
    <string name="monserrate">Monserrate</string>
    <string name="title_description">Descripción</string>
    <string name="value_description">El cerro de Monserrate es el más conocido de los cerros Orientales de Bogotá. Los cerros de Bogotá tienen por lo menos 16 millones de años de antigüedad. La basílica del Señor de Monserrate ha sido lugar de peregrinación religiosa desde la época colonial y se constituye en un atractivo natural, religioso, gastronómico de la ciudad.</string>
    <string name="value_description_cardview">El cerro de Monserrate es el más conocido de los cerros Orientales de Bogotá reconocido por la fe de su Santuario, sus jardines y fuentes, su gastronomía, sus bosques de niebla, sus atardeceres, y noches estrelladas.</string>
    <string name="value_weather">18°C</string>
    <string name="value_elevation">3152 MSNM </string>
    <string name="title_elevation">Altitud</string>
    <string name="title_history">Historia</string>
    <string name="value_history"> Hacia el año 1620 la Familia Fernández Valenzuela construyó las primeras ermitas en el cerro. Fué Pedro Fernández quién edificó la capilla en homenaje a la Santa Cruz de Monserrate. El Santuario del Señor Caído de Monserrate con un estilo neolítico fue diseñado  por Arturo Jaramillo y terminado alrededor del año 1925</string>
    <string name="title_restaurant">Restaurantes</string>
    <string name="value_restaurant">Restaurante Casa San Isidro(Gastronomia Europea) y Restaurante Casa Santa Clara (Gastronomia Colombiana) </string>
    <string name="title_location">Localización</string>
    <string name="value_rating">4.5 </string>
    <string name="title_rating">Puntuación</string>
    <string name="label_scale_rating">/5.0</string>
    <string name="value_location">Coordenadas</string>

    <!-- Sync Preferences -->
    <string name="notifications">Notificaciones</string>
    <string name="title_activity_bottom">BottomActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_list">Lista</string>
    <string name="title_detail">Detalle</string>
    <string name="title_preference">Configuración</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">CUNDINAMARCA GO</string>
    <string name="nav_header_subtitle">https://github.com/Traveloid-MINTIC/Traveloid</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="preferences">Preferencias</string>
    <string name="title_activity_tabbed">TabbedActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Correo Electronico</string>
    <string name="password">Contraseña</string>
    <string name="login">INICIAR SESIÓN</string>
    <string name="repeat_password">Repita Contraseña</string>
    <string name="user_register">Registrar Cuenta</string>
    <string name="user_name">Nombre del Usuario</string>
    <string name="without_count"><u>No tienes cuenta.Registrarse</u></string>
</resources>