<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:context=".detail.DetailActivity">

        <TextView
            android:id="@+id/name_text_view"
            style="@style/Text_Title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/monserrate"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/picture_image_view"
            android:layout_width="0dp"
            android:layout_height="288dp"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_text_view"
            app:srcCompat="@drawable/monserrate"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/label_descrption_text_view"
            style="@style/Text_Subtitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/title_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_rating_text_view" />

        <TextView
            android:id="@+id/label_rating_text_view"
            style="@style/Text_Subtitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:text="@string/title_rating"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/picture_image_view" />

        <TextView
            android:id="@+id/description_text_view"
            style="@style/Text_Mean"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/value_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_descrption_text_view" />

        <ImageView
            android:id="@+id/weather_image_view"
            android:layout_width="44dp"
            android:layout_height="35dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/weather_text_view"
            app:layout_constraintTop_toBottomOf="@+id/picture_image_view"
            app:srcCompat="@drawable/weather"
            tools:ignore="ContentDescription,HardcodedText,ImageContrastCheck"
            android:contentDescription="TODO" />

        <TextView
            android:id="@+id/weather_text_view"
            style="@style/Text_Subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:text="@string/value_weather"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/picture_image_view" />

        <TextView
            android:id="@+id/label_elevation_text_view"
            style="@style/Text_Subtitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/title_elevation"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description_text_view" />

        <TextView
            android:id="@+id/rating_text_view"
            style="@style/Text_Mean"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="24dp"
            android:text="@string/value_rating"
            app:layout_constraintStart_toEndOf="@+id/label_rating_text_view"
            app:layout_constraintTop_toBottomOf="@+id/picture_image_view" />

        <TextView
            android:id="@+id/label_scale_text_view"
            style="@style/Text_Mean"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="24dp"
            android:text="@string/label_scale_rating"
            app:layout_constraintStart_toEndOf="@+id/rating_text_view"
            app:layout_constraintTop_toBottomOf="@+id/picture_image_view" />

        <TextView
            android:id="@+id/elevation_text_view"
            style="@style/Text_Mean"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="16dp"
            android:text="@string/value_elevation"
            app:layout_constraintStart_toEndOf="@+id/label_elevation_text_view"
            app:layout_constraintTop_toBottomOf="@+id/description_text_view" />

        <TextView
            style="@style/Text_Subtitle"
            android:id="@+id/label_history_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/title_history"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_elevation_text_view" />

        <TextView
            style="@style/Text_Mean"
            android:id="@+id/history_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/value_history"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_history_text_view" />

        <TextView
            style="@style/Text_Subtitle"
            android:id="@+id/label_restaurants_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/title_restaurant"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/history_text_view" />

        <TextView
            android:id="@+id/restaurant_text_view"
            style="@style/Text_Mean"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/value_restaurant"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_restaurants_text_view" />

        <TextView
            android:id="@+id/label_location_text_view"
            style="@style/Text_Subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/title_location"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/restaurant_text_view" />

        <ImageView
            android:id="@+id/location_image_view"
            android:layout_width="wrap_content"
            android:layout_height="420dp"
            android:layout_marginTop="8dp"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_location_text_view"
            app:srcCompat="@drawable/map" />

        <TextView
            android:id="@+id/location_text_view"
            style="@style/Text_Mean"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:text="@string/value_location"
            app:layout_constraintStart_toEndOf="@+id/label_location_text_view"
            app:layout_constraintTop_toBottomOf="@+id/restaurant_text_view" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>